add alias for esconfig

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "laravel": {
             "providers" : [
                 "Gelim\\EMConfig\\Providers\\ConfigServiceProvider"
-            ]
+            ],
+            "alias" : {
+                "ESConfig" : "Gopex\\EasySetConfig\\utils\\ESConfig"
+            }
         }
     }
 
