fix problem to load config service provider

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "extra" : {
         "laravel": {
             "providers" : [
-                "Gelim\\EMConfig\\Providers\\ConfigServiceProvider"
+                "Gopex\\EasySetConfig\\Providers\\ConfigServiceProvider"
             ],
             "alias" : {
                 "ESConfig" : "Gopex\\EasySetConfig\\facade\\ESConfig"
